# ml-nexus

./: .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  MIRROR_TEST.md  README.md  README_FOR_AI.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: mirror-to-proboscis.yml
doc/: docker_host_env_workflow.md  how_to_use_pinjected.md  schematics_universal_architecture.md  schematics_universal_philosophy_and_usage.md  storage_resolver_architecture.md
doc/master/: git_tag_best_practices-ja.md  supporting_legacy_packages.md
doc/translations/en/: git_tag_best_practices-en.md  supporting_legacy_packages-en.md
docs_md/: how-to-add-subpackage.md  uv-monorepo-conversion-log.md
issues/: Docker機能利用方法についての検討.md  Documentation.md  pyenv_git_ownership_docker_issue.md  supporting_legacy_packages.md  雑多Issue検討.md
src/ml_nexus/: __init__.py  __pinjected__.py  assertions.py  docker_env.py  event_bus_util.py  idea_plugins.py  path_util.py  project_structure.py  rsync_util.py  schematics.py  script_runner.py  storage_resolver.py  util.py
src/ml_nexus/docker/: __init__.py  asyncio_lock.py  client.py  docker_command.py
src/ml_nexus/docker/builder/: docker_builder.py  docker_env_with_schematics.py  persistent.py
src/ml_nexus/docker/builder/builder_utils/: base_builder.py  building.py  common.py  docker_contexts.py  docker_for_rye.py  patch_rye.py  patch_uv.py  rye_util.py  schematics_for_setup_py.py  uv_project.py
src/ml_nexus/docker/builder/macros/: base64_runner.py  macro_defs.py
src/ml_nexus/python_management/: ensure_pyenv_virtualenv.sh
src/ml_nexus/schematics_util/: env_identification.py  universal.py  universal.pyi
src/ml_nexus/testing/: __init__.py  multi_environments.py  test_resources.py
test/: PINJECTED_MIGRATION_PLAN.md  PINJECTED_USAGE_ANALYSIS.md  PROGRESS_schematics_universal_testing.md  PYTEST_CONVERSION_PLAN.md  README_IPROXY_TESTING.md  TEST_DOCKER_ENV_HOST_SCHEMATICS_SUMMARY.md  __init__.py  __pinjected__.py  conftest.py  convert_iproxy_tests.py  iproxy_test_utils.py  pytest_iproxy_adapter.py  pytest_iproxy_plugin.py  test_all_schematics_kinds.py  test_auto_pyvenv_docker_env.py  test_base64_runner_error_handling.py  test_best_practice_example.py  test_docker_build_context_verification.py  test_docker_context_env.py  test_docker_context_integration.py  test_docker_context_simple.py  test_docker_context_usage.py  test_docker_context_verify.py  test_docker_env_host_with_schematics.py  test_docker_env_zeus_context.py  test_embedded_components_verification.py  test_embedded_docker_execution.py  test_embedded_docker_run.py  test_embedded_dockerfile_preview.py  test_embedded_final.py  test_embedded_mounts_check.py  test_embedded_pyvenv_python.py  test_embedded_run_direct.py  test_embedded_simple_build.py  test_embedded_simple_check.py  test_embedded_simple_run.py  test_embedded_uv_build.py  test_git_safe_directory_component.py  test_injected_pytest.py  test_iproxy_example.py  (+21 more)
test/dummy_projects/test_requirements/: app.py  requirements.txt
test/dummy_projects/test_resource/: config.yaml  data.json
test/dummy_projects/test_rye/: pyproject.toml
test/dummy_projects/test_rye/src/test_rye/: __init__.py
test/dummy_projects/test_setuppy/: setup.py
test/dummy_projects/test_setuppy/test_setuppy/: __init__.py
test/dummy_projects/test_source/: main.py  utils.py
test/dummy_projects/test_uv/: README.md  main.py  pyproject.toml
tmp/: check_git_status.py  direct_git_check.py  fix_meta_design.py  git_status_check.sh  test_results_summary.md  uv-pip-embed-progress.md  uv-pip-embed-test-results.md  verify_error_handling.sh
