[project]
name = "ml-nexus"
version = "0.1.7"




description = "Define project structure and dependencies for ML Nexus."
authors = [
    { name = "proboscis", email = "nameissoap@gmail.com" }
]
dependencies = [
    "tqdm",
    "pandas",
    "toml",
    "returns",
    "beartype",
    "pinjected-openai @ git+https://github.com/proboscis/pinjected_openai.git@v1.0.0",
    "pinjected>=0.2.210",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "setuptools<72.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ml_nexus"]
