[project]
name = "test-rye-project"
version = "0.1.0"
description = "Test Rye project for ml-nexus schematics testing"
authors = [
    {name = "Test Author", email = "test@example.com"}
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.3",
    "ruff>=0.1.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/test_rye"]